A ton of grammatical errors fixed.

--- a/dada/DADA/Template/templates/archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_options_screen.tmpl
@@ -96,11 +96,8 @@
   <td>
    <p>
     <label for="archive_subscribe_form">
-     Add a Subscription Form to the Archive Pages
+     Add a Subscription Form to the Archive Screens
     </label>
-    <br />
-    A subscription form will be added with the name of the list and the 
-    description of list at the bottom of every archive page.
    </p>
   </td>
  </tr>
@@ -113,8 +110,6 @@
     <label for="archive_search_form">
      Add a Search Form to the Archive Pages
     </label>
-    <br />
-    Allow your visitors to easily search through your list's archives.
    </p>
   </td>
  </tr>
@@ -139,7 +134,7 @@
       <td>
        <p>
         <label for="captcha_archive_send_form">
-         Enable CAPTCHA'ing on the, &quot;Forward to a Friend&quot; Form
+         Enable CAPTCHA on the &quot;Forward to a Friend&quot; Form
         </label>
        </p>
        
