--- a/dada/DADA/Template/templates/edit_template_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_template_screen.tmpl
@@ -248,7 +248,7 @@ This tag is
    <code>&lt;!-- tmpl_var show_profile_widget --&gt;</code>  
 </td>
   <td>
-  Will have a value of, 1 if profiles are enabled, 0 if not. 
+  Will have a value of: 1 if profiles are enabled; 0 if not. 
   </td>
  </tr>
 
@@ -267,7 +267,7 @@ This tag is
    <code>&lt;!-- tmpl_var subscribed_to_list --&gt;</code>  
 </td>
   <td>
-  Will have a value of, 1 if the visitor to <!-- tmpl_var PROGRAM_NAME --> is subscribed to your list. 
+  Will have a value of: 1 if the visitor to <!-- tmpl_var PROGRAM_NAME --> is subscribed to your list. 
   </td>
  </tr>
 
