--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -39,7 +39,7 @@
 			Mailing List Message
 		</legend>
 		<p>
-			Make sure to place the, <code>&lt;!-- tmpl_var message_body --&gt;</code> tag in the body of this email message!
+			Make sure to place the <code>&lt;!-- tmpl_var message_body --&gt;</code> tag in the body of this email message!
 		</p>
 
 		<fieldset>
@@ -135,7 +135,7 @@
 		This email message is sent when someone requests to be subscribed to your list. 
 	</p>
 	<p>
-		Make sure to place the, <code>&lt;!-- tmpl_var list_confirm_subscribe_link --&gt;</code> tag in the body of this email message!
+		Make sure to place the <code>&lt;!-- tmpl_var list_confirm_subscribe_link --&gt;</code> tag in the body of this email message!
 	</p>
 	
 	<!-- tmpl_if list_settings.enable_closed_loop_opt_in --> 
@@ -203,7 +203,7 @@
 	<!-- /tmpl_if --> 
 	
 	<p>
-		Make sure to place the, <strong>&lt;!-- tmpl_var list_confirm_unsubscribe_link --&gt;</strong> tag in the body of this email message!
+		Make sure to place the <code>&lt;!-- tmpl_var list_confirm_unsubscribe_link --&gt;</code> tag in the body of this email message!
 	</p>
 	
 		<p>
