--- a/dada/DADA/Template/templates/feature_set_screen.tmpl
+++ b/dada/DADA/Template/templates/feature_set_screen.tmpl
@@ -18,8 +18,8 @@
 <!--/tmpl_if--> 
 
 <p>
-The below list of headings correspond to the administration menu and the various screens
-that actually make up the list control panel.</p>
+The below list of headings corresponds to the administration menu and the various screens
+that actually make up the List Control Panel.</p>
 
 <p>Unchecking any of these options will disable access to them when you log into 
 this list using your <em>List Password</em>. Access to these screens will always be
