--- a/dada/DADA/Template/templates/profile_fields.tmpl
+++ b/dada/DADA/Template/templates/profile_fields.tmpl
@@ -153,7 +153,7 @@
     
 
 	<p>
-	 Subscriber Profile Fields are Global and will affect all Mailing Lists
+	 Subscriber Profile Fields are Global and will affect all Mailing Lists. 
 	 You may only change the Subscriber Profile Fields if you are logged in with the <!-- tmpl_var PROGRAM_NAME --> 
 	  Root Password.
 	</p>
