--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -91,7 +91,8 @@
 			  </label>
 		  <br />
 		  
-		<!-- tmpl_include html_message_form_field_widget.tmpl --> 
+		<!-- tmpl_include html_message_form_field_widget.tmpl -->
+		 
 		 
 		 </p>
 		 <fieldset>
@@ -107,7 +108,7 @@
 		   <td>
 			<p>
 			 <strong>
-			  Images in this Webpage Should:
+			  Images in this webpage should:
 			 </strong>
 			</p>
 		  
@@ -131,7 +132,7 @@
 			 <br />
 			 <input type="radio" name="url_options" value="cid" id="cid" />
 			  <label for="cid">
-			   be embedded in the message itself. 
+			   be embedded in the message itself 
 			 </label>
 			 
 		<!-- tmpl_unless can_display_attachments --> 
@@ -153,7 +154,7 @@
 			 
 			  <label for="remove_javascript">
 				Remove Javascript
-			   </label> <em>(Highly Recommended)</em>
+			   </label> <em>(highly recommended)</em>
 			 </p>
 			</td>
 	
