--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -1,16 +1,14 @@
 <!-- begin setup_info_screen.tmpl -->
-
-<!-- tmpl_set name="title" value="Setup Information" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
+<!-- tmpl_set name="title" value="App Information &#187; Configuration" -->
 
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-	 	<!-- tmpl_var title --> 
+		App Information &#187; Configuration
 	</div>
 	<!-- tmpl_include help_link_widget.tmpl -->
 </div>
-
 
 
 <h1>Installation and Configuration</h1> 
@@ -47,7 +45,7 @@
 
 <h2>You have a Basic Installation of <!-- tmpl_var PROGRAM_NAME --></h2> 
 
-<p><!-- tmpl_var PROGRAM_NAME --> is set up by configuring the, <code>dada/DADA/Config.pm</code> file, itself. No outside
+<p><!-- tmpl_var PROGRAM_NAME --> is set up by configuring the <code>dada/DADA/Config.pm</code> file, itself. No outside
 	configuration file has been found.</p>
 
 
