--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -125,13 +125,13 @@
 	  Black List
  </legend>
 
-<p>The Black List are addresses that are <strong>not allowed</strong> to be a part of your Subscribers List.</p>
+<p>The Black List is a list of addresses that are <strong>not allowed</strong> to be a part of your Subscribers List.</p>
 
-<p>Your Black List may hold both complete email addresses  (you@example.com) or 
- a part of an email address (example.com) to you Black List.</p>
+<p>You may add both complete email addresses  (you@example.com) or 
+ parts of email addresses (example.com).</p>
 
 <p>
-	Parts of addresses will match whole addresses - &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
+	Parts of email addresses will match whole addresses. For example, &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
 </p>
 
 <p>
@@ -196,7 +196,7 @@
 				       Continue to Allow Black Listed Addresses to be Invited/Subscribed Via The List Control Panel. 
 				      </label>
 					  <br />
-					  Black Listed Addresses will just need to be manually, checked/selected to be Invited/Subscribed.  
+					  Black Listed Addresses will just need to be manually checked/selected to be Invited/Subscribed.  
 				     </p>
 				   </td>
 				  </tr>
@@ -219,12 +219,12 @@
 	 </legend>
 	
 <p>
-	The White List are addresses that are <strong>only</strong> allowed to be a part of your Subscribers List.</p>	
-	<p>Your White List may hold both complete email addresses  (you@example.com) or 
-	 a part of an email address (example.com) to you Black List.</p>
+	The White List are a list of email addresses only allowed to be a part of your Subscribers List.</p>	
+	<p>You may add both complete email addresses (you@example.com) or 
+	 parts of email addresses (example.com).</p>
 
 	<p>
-		Parts of addresses will match whole addresses - &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
+		Parts of email addresses will match whole addresses. For example, &quot;example.com&quot; will match, &quot;you@example.com&quot; and, &quot;someone.else@example.com&quot;
 	</p>
 
 	
