--- a/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_viewport_widget.tmpl
@@ -16,7 +16,7 @@
 	<!-- tmpl_else --> 
 	
 		<p class="alert">
-		 There are currently no <!-- tmpl_var type_title -->.
+		 There are currently no members of, <!-- tmpl_var type_title -->.
 	
 		    <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'white_list'))" -->
 		
