--- a/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_archive_options_screen.tmpl
@@ -2,7 +2,15 @@
 
 <!-- tmpl_set name="title" value="Advanced Archive Options" -->
 
-<!-- tmpl_include help_link_widget.tmpl -->
+
+<div id="screentitle"> 
+	<div id="screentitlepadding">
+		<!-- tmpl_var title --> 
+	</div> 
+	<!-- tmpl_include help_link_widget.tmpl -->
+</div>
+
+
 
 <!-- tmpl_if done -->  
 	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
