--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -19,7 +19,7 @@
 <legend>Message Body Authoring</legend> 
 
 <p>
-	These preferences will be honored in the, <strong>Send a Message</strong> screen and in the <strong>Beatitude Plugin</strong>
+	These preferences will be honored in the <strong>Send a Message</strong> screen and in the <strong>Beatitude Plugin</strong>
 </p>
 
 <table cellpadding="5" border="0"> 
