--- a/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin mass_mailing_preferences_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Mailing Sending &#187; Mass Mailing Preferences" -->
+<!-- tmpl_set name="title" value="Mail Sending &#187; Mass Mailing Preferences" -->
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		<!-- tmpl_var title --> 
@@ -70,7 +70,7 @@
 	<!-- tmpl_var mass_send_amount_menu -->
  message(s) per batch
      <br /> 
-     and then wait and sleep: <!-- tmpl_var bulk_sleep_amount_menu --> seconds, before sending the next batch.
+     and then wait and sleep: <!-- tmpl_var bulk_sleep_amount_menu --> second(s), before sending the next batch.
     </p>
    </fieldset>
 
@@ -181,8 +181,11 @@
      Auto-Pickup Dropped List Message Mailings
     </label>
     <br />
-    Since sending to your entire list is a long process, it can sometimes gets interrupted by the server and  won't finish to completion.
-    Activating this feature safeguards against this problem by reloading a mailing from the point that it was dropped automatically. 
+
+
+Since sending to your entire mailing list is usually a lengthy process (for most mailing lists), it can sometimes get interrupted by the server and won't proceed to completion. Activating this feature safeguards against this problem by automatically reloading a mailing from the point that it was dropped.
+
+
     
     
     <table>
@@ -201,7 +204,7 @@
         reload the mailing between batches manually. 
 	</p>
 	
-	<p>This option should <em>only</em> be used if the, <code>sleep()</code> Perl function is, for whatever reason, not working properly. 
+	<p>This option should <em>only</em> be used if the <code>sleep()</code> Perl function is not working properly. 
 	   Enabling this option will also <strong>require</strong> you to use the web-based mailing monitor for successfully mailings.
 
         
