--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -482,8 +482,11 @@ for it to work correctly. For help on setting the cronjob, see the
 
 
 <p><input type="checkbox" name="install_password_protect_directories" id="install_password_protect_directories" value="1"  /><label for="install_password_protect_directories">Password Protect Directories</label> <span class="alert">Optionally Requires Additional Configuration (cronjob)</span>	</p> 
+</fieldset> 
 
-<h2>WYSIWYG Editors</h2>
+<fieldset> 
+	
+<legend>WYSIWYG Editors</legend>
 
 <fieldset> 
 	<legend>Support Files Directory</legend>
@@ -494,19 +497,34 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <p>
 	<label for="support_files_dir_path">Support File Directory Path:</label><br />
-	<input type="text" name="support_files_dir_path"  id="support_files_dir_path" style="width:70%" value="<!-- tmpl_var support_files_dir_path -->" /><strong>/dada_mail_support_files</strong>
+	<input type="text" name="support_files_dir_path"  id="support_files_dir_path" style="width:70%" value="<!-- tmpl_var support_files_dir_path -->" /><strong>/<!-- tmpl_var Support_Files_Dir_Name --></strong>
 	<br />
 	<label for="support_files_dir_url">Corresponding Support File Directory URL:</label>
 	<br />
-	<input type="text" name="support_files_dir_url" id="support_files_dir_url" style="width:70%" value="<!-- tmpl_var support_files_dir_url -->" /><strong>/dada_mail_support_files</strong>
+	<input type="text" name="support_files_dir_url" id="support_files_dir_url" style="width:70%" value="<!-- tmpl_var support_files_dir_url -->" /><strong>/<!-- tmpl_var Support_Files_Dir_Name --></strong>
 </p>
 
 </fieldset> 
 
-
-<input type="checkbox" name="wysiwyg_editor_install_fckeditor" id="wysiwyg_editor_install_fckeditor" value="1" checked="checked"/>			
+<p>
+	<input type="checkbox" name="wysiwyg_editor_install_ckeditor" id="wysiwyg_editor_install_ckeditor" value="1" checked="checked"/>			
+<label for="wysiwyg_editor_install_ckeditor">Install CKeditor</label>
+</p>
+<p>
+	<input type="checkbox" name="wysiwyg_editor_install_fckeditor" id="wysiwyg_editor_install_fckeditor" value="1" checked="checked"/>			
 <label for="wysiwyg_editor_install_fckeditor">Install FCKeditor</label>
+</p>
+<p>
+	<input type="checkbox" name="wysiwyg_editor_install_tiny_mce" id="wysiwyg_editor_install_tiny_mce" value="1" checked="checked"/>			
+<label for="wysiwyg_editor_install_tiny_mce">Install Tiny MCE</label>
+</p>
 		
+<h2>File Browsers</h2>
+
+<input type="checkbox" name="file_browser_install_kcfinder" id="file_browser_install_kcfinder" value="1" checked="checked"/>			
+<label for="file_browser_install_kcfinder">Install KCFinder</label>
+
+
 
 </fieldset> 
 
