--- a/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
+++ b/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
@@ -1,24 +1,24 @@
 $WYSIWYG_EDITOR_OPTIONS = { 
 	fckeditor => { 
-		enabled => <!-- tmpl_var fckeditor_enabled default="0" -->, 
-		url     => '<!-- tmpl_var fckeditor_url -->', 
+		enabled => <!-- tmpl_var i_fckeditor_enabled default="0" -->, 
+		url     => '<!-- tmpl_var i_fckeditor_url -->', 
 	}, 
 	ckeditor    => { 
-		enabled => 0, 
-		url     => '', 
+		enabled => <!-- tmpl_var i_ckeditor_enabled default="0" -->, 
+		url     => '<!-- tmpl_var i_ckeditor_url -->', 
 	}, 
 	tiny_mce => { 
-		enabled => 0, 
-		url     => '', 
+		enabled => <!-- tmpl_var i_tiny_mce_enabled default="0" -->, 
+		url     => '<!-- tmpl_var i_tiny_mce_url -->', 
 	},
 };
 
 $FILE_BROWSER_OPTIONS = { 
 	kcfinder  => { 
-		enabled      => 0, 
-		url          => '', 
-		upload_dir   => '', 
-		upload_url   => '',
+		enabled      => <!-- tmpl_var i_kcfinder_enabled default="0" -->, 
+		url          => '<!-- tmpl_var i_kcfinder_url -->', 
+		upload_dir   => '<!-- tmpl_var i_kcfinder_upload_dir -->', 
+		upload_url   => '<!-- tmpl_var i_kcfinder_upload_url -->',
 		session_name => 'PHPSESSID', 
 		session_dir  => '/tmp',
 	},
