Tweaking the WYSIWYG configs so they're all similar. Ish.

--- a/dada/DADA/Template/templates/admin_template.tmpl
+++ b/dada/DADA/Template/templates/admin_template.tmpl
@@ -34,6 +34,7 @@
 	<!-- /tmpl_if -->
 	<!-- tmpl_if using_ckeditor --> 
 		<script src="<!-- tmpl_var CKEDITOR_URL -->/ckeditor.js"         type="text/javascript" ></script>
+		<script src="<!-- tmpl_var CKEDITOR_URL -->/dada_mail_config.js" type="text/javascript" ></script>
 	<!-- /tmpl_if --> 
 	<!-- tmpl_if using_tiny_mce --> 
 		<script src="<!-- tmpl_var TINY_MCE_URL -->/tiny_mce.js"         type="text/javascript"></script>
