--- a/dada/DADA/Template/templates/html_message_form_field_widget.tmpl
+++ b/dada/DADA/Template/templates/html_message_form_field_widget.tmpl
@@ -3,10 +3,15 @@
 			    <script type="text/javascript">   
 			    	<!--
 			        var oFCKeditor = new FCKeditor('html_message_body') ;
-			        <!-- tmpl_include FCKeditor_default_js_options.tmpl --> 
+					oFCKeditor.BasePath           = "<!-- tmpl_var FCKEDITOR_URL -->/"
+				    oFCKeditor.Config['FullPage'] = true;
+				    oFCKeditor.Height            = 800;
+					oFCKeditor.Config["CustomConfigurationsPath"] = "<!-- tmpl_var FCKEDITOR_URL -->/dada_mail_config.js"  ; 
+					
 					<!-- tmpl_if html_message_body_content_js_escaped --> 
 						oFCKeditor.Value = "<!-- tmpl_var html_message_body_content_js_escaped -->";
 					<!-- /tmpl_if --> 
+					
 			        oFCKeditor.Create() ;
 			        //-->
 				</script> 
@@ -14,7 +19,12 @@
 	<!-- tmpl_if using_ckeditor --> 
 			    	<textarea name="html_message_body" cols="80" rows="30" id="html_message_body"><!-- tmpl_var html_message_body_content  escape="HTML" --></textarea>
 					<script type="text/javascript">
-						CKEDITOR.replace( 'html_message_body' );
+						CKEDITOR.replace(
+							'html_message_body', 
+							{ 
+							        customConfig : '<!-- tmpl_var CKEDITOR_URL -->/dada_mail_config.js',
+									toolbar :      'DadaMail_Admin'
+							});
 					</script>
 	<!-- /tmpl_if --> 
 	
