--- a/dada/installer-disabled/templates/ckeditor_config_js.tmpl
+++ b/dada/installer-disabled/templates/ckeditor_config_js.tmpl
@@ -10,4 +10,22 @@ CKEDITOR.editorConfig = function(config) {
    config.filebrowserUploadUrl      = '<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/kcfinder/upload.php?type=files';
    config.filebrowserImageUploadUrl = '<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/kcfinder/upload.php?type=images';
    config.filebrowserFlashUploadUrl = '<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/kcfinder/upload.php?type=flash';
+
+	config.toolbar_DadaMail_Admin =
+	[
+		{ name: 'basicstyles',	items : [ 'Bold','Italic','Underline','Strike','Subscript','Superscript','-','RemoveFormat' ] },
+		{ name: 'styles',		items : [ 'Styles','Format','Font','FontSize' ] },
+		{ name: 'colors',		items : [ 'TextColor','BGColor' ] },
+		'/',
+		{ name: 'paragraph',	items : [ 'NumberedList','BulletedList','-','Outdent','Indent','-','Blockquote','CreateDiv','-','JustifyLeft','JustifyCenter','JustifyRight','JustifyBlock','-','BidiLtr','BidiRtl' ] },
+		{ name: 'links',		items : [ 'Link','Unlink','Anchor' ] },
+		{ name: 'insert',		items : [ 'Image','Table','HorizontalRule','Smiley','SpecialChar' ] },
+
+		'/',
+		{ name: 'clipboard',	items : [ 'Cut','Copy','Paste','PasteText','PasteFromWord','-','Undo','Redo' ] },
+		{ name: 'editing',		items : [ 'Find','Replace','-','SelectAll','-','SpellChecker', 'Scayt' ] },
+		{ name: 'document',		items : [ 'Source','Maximize', 'ShowBlocks'] },
+	];
+
+
 };
