--- a/dada/DADA/Template/templates/html_message_form_field_widget.tmpl
+++ b/dada/DADA/Template/templates/html_message_form_field_widget.tmpl
@@ -2,16 +2,14 @@
 	<!-- tmpl_if using_fckeditor --> 
 			    <script type="text/javascript">   
 			    	<!--
-			        var oFCKeditor = new FCKeditor('html_message_body') ;
-					oFCKeditor.BasePath           = "<!-- tmpl_var FCKEDITOR_URL -->/"
-				    oFCKeditor.Config['FullPage'] = true;
-				    oFCKeditor.Height            = 800;
-					oFCKeditor.Config["CustomConfigurationsPath"] = "<!-- tmpl_var FCKEDITOR_URL -->/dada_mail_config.js"  ; 
-					
+			        var oFCKeditor                                = new FCKeditor('html_message_body') ;
+					oFCKeditor.BasePath                           = "<!-- tmpl_var FCKEDITOR_URL -->/";
+				    oFCKeditor.Config['FullPage']                 = true;
+				    oFCKeditor.Height                             = 800;
+					oFCKeditor.Config["CustomConfigurationsPath"] = "<!-- tmpl_var FCKEDITOR_URL -->/dada_mail_config.js"; 
 					<!-- tmpl_if html_message_body_content_js_escaped --> 
-						oFCKeditor.Value = "<!-- tmpl_var html_message_body_content_js_escaped -->";
+						oFCKeditor.Value                          = "<!-- tmpl_var html_message_body_content_js_escaped -->";
 					<!-- /tmpl_if --> 
-					
 			        oFCKeditor.Create() ;
 			        //-->
 				</script> 
