--- a/dada/installer-disabled/templates/tiny_mce_config_js.tmpl
+++ b/dada/installer-disabled/templates/tiny_mce_config_js.tmpl
@@ -1,36 +1,33 @@
 <!-- tmpl_if kcfinder_enabled --> 
 	function openKCFinder(field_name, url, type, win) {
 	    tinyMCE.activeEditor.windowManager.open({
-	        file: '<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/kcfinder/browse.php?opener=tinymce&type=' + type,
-	        title: 'KCFinder',
-	        width: 700,
-	        height: 500,
-	        resizable: "yes",
-	        inline: true,
-	        close_previous: "no",
-	        popup_css: false
+	        file           : '<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/kcfinder/browse.php?opener=tinymce&type=' + type,
+	        title          : 'KCFinder',
+	        width          : 700,
+	        height         : 500,
+	        resizable      : "yes",
+	        inline         : true,
+	        close_previous : "no",
+	        popup_css      : false
 	    }, {
-	        window: win,
-	        input: field_name
+	        window : win,
+	        input  : field_name
 	    });
 	    return false;
 	}
 <!-- /tmpl_if --> 
 
 tinyMCE.init({
-
 	<!-- tmpl_if kcfinder_enabled --> 
-		file_browser_callback : "openKCFinder",
+		file_browser_callback           : "openKCFinder",
 	<!-- /tmpl_if -->
-	
-		theme : "advanced",
+		mode                            : "specific_textareas",
+		editor_selector                 : "html_message_body"
+		verify_html                     : false, 
+		theme                           : "advanced",
 		theme_advanced_toolbar_location : "top",
-		theme_advanced_toolbar_align : "left",
-        mode : "specific_textareas",
-        editor_selector : "html_message_body"
-
-        relative_urls : false,
-        remove_script_host : false, 
-        document_base_url : "<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/",
-
+		theme_advanced_toolbar_align    : "left",
+        relative_urls                   : false,
+        remove_script_host              : false, 
+        document_base_url               : "<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/",
 });
