Reorg of form fields - notice that FCKeditor isn't really recommended.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -510,13 +510,15 @@ for it to work correctly. For help on setting the cronjob, see the
 	<input type="checkbox" name="wysiwyg_editor_install_ckeditor" id="wysiwyg_editor_install_ckeditor" value="1" checked="checked"/>			
 <label for="wysiwyg_editor_install_ckeditor">Install CKeditor</label>
 </p>
-<p>
-	<input type="checkbox" name="wysiwyg_editor_install_fckeditor" id="wysiwyg_editor_install_fckeditor" value="1" checked="checked"/>			
-<label for="wysiwyg_editor_install_fckeditor">Install FCKeditor</label>
-</p>
+
 <p>
 	<input type="checkbox" name="wysiwyg_editor_install_tiny_mce" id="wysiwyg_editor_install_tiny_mce" value="1" checked="checked"/>			
 <label for="wysiwyg_editor_install_tiny_mce">Install Tiny MCE</label>
+</p>
+
+<p>
+	<input type="checkbox" name="wysiwyg_editor_install_fckeditor" id="wysiwyg_editor_install_fckeditor" value="1" checked="checked"/>			
+<label for="wysiwyg_editor_install_fckeditor">Install FCKeditor (Not Recommended)</label>
 </p>
 		
 <h2>File Browsers</h2>
