Fix comment bug.

--- a/dada/installer-disabled/templates/tiny_mce_config_js.tmpl
+++ b/dada/installer-disabled/templates/tiny_mce_config_js.tmpl
@@ -22,12 +22,12 @@ tinyMCE.init({
 		file_browser_callback           : "openKCFinder",
 	<!-- /tmpl_if -->
 		mode                            : "specific_textareas",
-		editor_selector                 : "html_message_body"
+		editor_selector                 : "html_message_body",
 		verify_html                     : false, 
 		theme                           : "advanced",
 		theme_advanced_toolbar_location : "top",
 		theme_advanced_toolbar_align    : "left",
         relative_urls                   : false,
         remove_script_host              : false, 
-        document_base_url               : "<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/",
+        document_base_url               : "<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/"
 });
