Initial try at this feature

--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -542,6 +542,41 @@
 	</p>
 </fieldset>
 
+
+
+<fieldset>
+	<legend>
+		Subscription Notice 
+	</legend>
+
+    <p>
+    <label for="admin_subscription_notice_message_subject" class="label_by_5">Subject:</label> <input type="text" name="admin_subscription_notice_message_subject" id="admin_subscription_notice_message_subject" value="<!-- tmpl_var list_settings.admin_subscription_notice_message_subject escape=HTML -->" class="midi" />
+    </p>
+    
+    <p><label for="admin_subscription_notice_message">PlainText Message:</label>
+    
+	<p>
+<textarea name="admin_subscription_notice_message" id="admin_subscription_notice_message" rows="10" cols="50" ><!-- tmpl_var list_settings.admin_subscription_notice_message escape="HTML" --></textarea> 
+	</p>
+</fieldset>
+<fieldset>
+	<legend>
+		Unsubscription Notice 
+	</legend>
+
+    <p>
+    <label for="admin_unsubscription_notice_message_subject" class="label_by_5">Subject:</label> <input type="text" name="admin_unsubscription_notice_message_subject" id="admin_unsubscription_notice_message_subject" value="<!-- tmpl_var list_settings.admin_unsubscription_notice_message_subject escape=HTML -->" class="midi" />
+    </p>
+    
+    <p><label for="admin_unsubscription_notice_message">PlainText Message:</label>
+    
+	<p>
+<textarea name="admin_unsubscription_notice_message" id="admin_unsubscription_notice_message" rows="10" cols="50" ><!-- tmpl_var list_settings.admin_unsubscription_notice_message escape="HTML" --></textarea> 
+	</p>
+</fieldset>
+
+
+
 <fieldset>
 	<legend>
    <a href="#" onclick="toggleDisplay('adv_options');return false;">
