--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -364,11 +364,11 @@ People will still be able to subscribe/unsubscribe
    <td width="99%">
     <p>
      <label for="get_sub_notice">
-      Receive Subscription Notices
+      Send Subscription Notices
      </label>
      <br />
-     Be notified every time someone subscribes to your list with a short email.
-    </p>
+     Send Subscription Notices to: <!-- tmpl_var send_subscription_notice_to_popup_menu -->
+	    </p>
    </td>
   </tr>
   <tr>
@@ -696,10 +696,10 @@ Unsubscription Confirmations
    <td width="99%">
     <p>
      <label for="get_unsub_notice"> 
-      Receive Unsubscription Notices
+      Send Unsubscription Notices
      </label>
      <br />
-     Be notified every time someone unsubscribes to your list with a short email.
+     Send Unsubscription Notices to: <!-- tmpl_var send_unsubscription_notice_to_popup_menu -->
     </p>
    </td>
   </tr>
