--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -33,8 +33,6 @@
 
 <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
 
- 
-	
 <form name="send_email" enctype="multipart/form-data" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
  
  <input type="hidden" name="f" value="send_email" />
@@ -42,43 +40,62 @@
 	  
 <!-- tmpl_include message_headers_fieldset_widget.tmpl --> 
 
+<fieldset> 
 
-
-
-<fieldset>
 <legend>Message Body</legend>
 
+<div id="format_type_container">
 
- 
-     <fieldset style="background:#e6e6e6"> 
+<ul id="format_type_list">
+ <li>
+  <a href="#" id="toggleHTML" style="border-left:1px solid black" class="format_type_container_active">HTML Version</a>
+ </li>
+ <li>
+  <a href="#" id="togglePlainText"  class="format_type_container_regular">PlainText Version</a>
+ </li>
+</ul>
+</div>
+<div style="clear:both"></div>
 
-     <legend>
-      <a href="#" onclick="toggleDisplay('html_message'); return false;">+/-</a> HTML Version
-     </legend>
-      
-		
-<div id="html_message" <!-- tmpl_if list_settings.show_message_body_html_ver --><!-- tmpl_else -->style="display:none"<!-- /tmpl_if -->> 
- <!-- tmpl_include html_message_form_field_widget.tmpl --> 
+<div id="html_message" style="background-color:#fff;border:1px solid black;border-top:0;"> 
+<!-- tmpl_include html_message_form_field_widget.tmpl --> 
 </div>
 
-</fieldset> 
-
-
-
- <fieldset style="background:#e6e6e6"> 
-  
-		 <legend>
-		  <a href="#" onclick="toggleDisplay('text_message');return false;">+/-</a> PlainText Version
-		 </legend>
-		 
- 
- <div id="text_message" <!-- tmpl_if list_settings.show_message_body_plaintext_ver --><!-- tmpl_else -->style="display:none"<!-- /tmpl_if -->> 
- <!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
+<div id="text_message" style="display:none;background-color:#fff;border:1px solid black;border-top:0;"> 
+<!-- tmpl_include plaintext_message_form_field_widget.tmpl -->
 </div> 
-</fieldset> 
 
+</fieldset>
 
-</fieldset> 
+<script type="text/javascript">
+
+	$('togglePlainText').observe('click', function(event) {
+		event.stop();	
+		$('togglePlainText').removeClassName('format_type_container_regular');
+		$('toggleHTML').addClassName('format_type_container_regular');
+		$('togglePlainText').addClassName('format_type_container_active');
+		$('toggleHTML').removeClassName('format_type_container_active');
+	  	new Effect.Parallel([
+			Effect.Fade('html_message'),
+			Effect.Appear('text_message')
+	  	], { 
+	    	duration: 0
+  		});
+	});
+	$('toggleHTML').observe('click', function(event) {
+		event.stop();
+		$('toggleHTML').removeClassName('format_type_container_regular');
+		$('togglePlainText').addClassName('format_type_container_regular');
+		$('toggleHTML').addClassName('format_type_container_active');
+		$('togglePlainText').removeClassName('format_type_container_active');
+		new Effect.Parallel([
+			Effect.Fade('text_message'),
+			Effect.Appear('html_message')
+		], { 
+			duration: 0
+		});
+	});
+</script> 
 
 <!-- tmpl_include send_email_archive_options_widget.tmpl -->
 
@@ -86,69 +103,8 @@
 
 <!-- tmpl_include partial_sending_options_widget.tmpl --> 
 
+<!-- tmpl_include file_attachments_widget.tmpl -->
 
-<fieldset> 
-
-<legend>
-       <a href="#" id="partial_sending_options_widget_label" onclick="toggleDisplay('file_attachments');return false;">
-      +/- 
-     </a>File Attachments
-</legend>
-
-
-
-<div id="file_attachments" style="display:none"> 
-
-         <p>
-         <input type="file" name="attachment_1"  size="36" /><br /> 
-         <input type="file" name="attachment_2"  size="36" /><br /> 
-         <input type="file" name="attachment_3"  size="36" /><br />  
-
-         <!-- tmpl_if comment --> 
-
-			You can continue to add to this list, like so: 
-
-	         <input type="file" name="attachment_4"  size="36" /><br />          
-	         <input type="file" name="attachment_5"  size="36" /><br />          
-
-			Just reflect the number of attachments you have in the, "attachment" 
-			hidden form field, below: 
-		
-		<!-- /tmpl_if --> 
-
-         </p>
-         
-	    <input type="hidden" name="attachment" value="3" />
-
-</div> 
-
-
-
-</fieldset> 
-
-<!-- tmpl_if comment --> 
-
-	  <tr>
-	   <td align="right">
-	    <p>
-	     <strong>
-	      Options:
-	     </strong>
-	    </p>
-	   </td>
-	   <td>
-	    <p>
-	     <input type="checkbox" name="apply_template" id="apply_template" value="1"  tmpl_if apply_list_template_to_html_msgs checked="checked" tmpl_if />
-	     <label for="apply_template">
-	      Apply the list template to the HTML message
-	     </label>
-	    </p>
-	   </td>
-	  </tr>
-
-<!-- /tmpl_if --> 
-
-	  
 <!-- tmpl_include subscriber_field_tags_listing_widget.tmpl --> 
  
 <!-- tmpl_include send_a_list_message_button_widget.tmpl -->
