--- a/dada/DADA/Template/templates/css/default.css
+++ b/dada/DADA/Template/templates/css/default.css
@@ -792,58 +792,68 @@ div.alt,
 
 
 
-#format_type_container { 
-	padding-bottom:0;
-	margin-bottom:0;
+#format_type_container {
+	/* for centering: 
+	 clear: left;
+	float: left;
+	*/
+	padding: 0;
+	background: transparent url(<!-- tmpl_var S_PROGRAM_URL -->/img/centeredmenu.gif) bottom repeat-x;
+	width: 100%;
+	overflow: hidden;
+	font-size: 1em;
+	font-family: "Century Gothic", CenturyGothic, "AppleGothic", "Avant Garde", Avantgarde, sans-serif;
+	/* text-shadow: 1px 1px 2px #330033;*/
 }
-#format_type_container ul
-{
-padding-left: 0;
-margin-left: 0;
-
-padding-bottom:0;
-margin-bottom:0;
-
-background-color: #ededed;
-/*border-bottom:1px solid black;*/
-float: left;
-width: 100%;
-
-font-size: 1em;
-font-family: "Century Gothic", CenturyGothic, "AppleGothic", "Avant Garde", Avantgarde, sans-serif;
-
-
+#format_type_container ul {
+	float: left;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	position: relative;
+	/*  for centering:
+	left: 50%;
+	text-align: center;
+	*/
 }
-
-#format_type_container ul li { display: inline; }
-
-#format_type_container ul li a
-{
-margin: 0px;
-padding: 5px 10px;
-text-decoration: none;
-color: #000;
-
-float: left;
-
-border-right: 1px solid #000;
-border-top:  1px solid #000;
+#format_type_container ul li {
+	display: block;
+	float: left;
+	list-style: none;
+	margin: 20px 0 0 0;
+	padding: 0;
+	position: relative;
+	/*  for centering:
+	right: 50%;
+	*/
 }
-
-#format_type_container ul li a:hover
-{
+#format_type_container ul li a {
+	display: block;
+	float: left;
+	margin: 0 1px;
+	padding: 5px 10px;
+	background: #e6e6e6;
+	text-decoration: none;
+	color: #000;
+	border-top: 1px solid #000;
+	border-left: 1px solid #000;
+	border-right: 1px solid #000;
+	position: relative;
+	bottom: 1px;
+}
+#format_type_container ul li a:hover {
 	background: #ffe1af;
 	color: #000;
 }
-
-.format_type_container_regular { 
-	background: #e6e6e6;
-	border-bottom: 1px solid black;
+#format_type_container ul li.active {
+	margin-top: 10px;
 }
-.format_type_container_active { 
-	font-weight: bold; 
-	font-size: 1.1em;
-	background-color:#fff;
-	border-bottom: 1px solid #fff;
-	
+#format_type_container ul li.active a,
+#format_type_container ul li.active a:hover {
+	position: relative;
+	bottom: 0;
+	padding: 10px;
+	background: #fff;
+	color: #000;
+	font-weight: bold;
 }
