--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -34,73 +34,18 @@
 
 <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
 
+<!-- tmpl_include send_email_message_body_help_widget.tmpl -->
+
+
 <form name="send_email" enctype="multipart/form-data" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
- 
  <input type="hidden" name="f" value="send_email" />
  <input type="hidden" name="advanced" value="yes" />
 	  
 <!-- tmpl_include message_headers_fieldset_widget.tmpl --> 
-
-
-<div id="message_body_help" style="display:none;">
-
-<h2>
- <!-- tmpl_var PROGRAM_NAME --> supports sending messages formatted in HTML, Plaintext, or both!
-</h2> 
-
-<ul>
-<li><p>
-	You only need to create one version of your message: HTML <em>or</em> PlainText. 
-</p>
-</li>
-
-<li><p>
-	You <strong>may</strong> create two versions of your message. 
-	Both copies will be embedded in the same email you send. 
-	Your PlainText version will be shown to users whose mail reader cannot view your HTML version. 
-</p>
-</li>
-
-<li><p>
-	If you create an HTML version of your message, but not a PlainText version, 
-	a PlainText version will be created automatically for you by <!-- tmpl_var PROGRAM_NAME -->, 
-	so that everyone will be able to view your message. 
-</p>
-</li>
-
-<li><p>
-	If you create a PlainText version of your message, but not an HTML version, 
-	no HTML version will be created. 
-</p>
-</li>
-
-</ul>
-
-<div style="text-align: center;">
-	<input value="Thanks!" onclick="Modalbox.hide()" type="button" class="small_button" />
-</div> 
-
-	</div>
-
 <fieldset> 
-
 <legend>Message Body [<a href="#" onclick="Modalbox.show($('message_body_help'), {title: 'Message Body Help', width: 640, height:325}); return false;">?</a>]</legend>
 
-<!-- style="border-left:1px solid black" class="format_type_container_active" --> 
-<!--  class="format_type_container_regular" --> 
-
-<div id="format_type_container">
-
-<ul>
- <li id="toggleHTML_li" class="active">
-  <a href="#" id="toggleHTML">HTML Version</a>
- </li>
- <li id="togglePlainText_li">
-  <a href="#" id="togglePlainText">PlainText Version</a>
- </li>
-</ul>
-</div>
-<div style="clear:both"></div>
+<!-- tmpl_include message_format_type_toggler_widget.tmpl --> 
 
 <div id="html_message" style="background-color:#fff;border:1px solid black;border-top:0;padding:0;margin:0;"> 
 <!-- tmpl_include html_message_form_field_widget.tmpl --> 
@@ -111,32 +56,7 @@
 </div> 
 
 </fieldset>
-
-<script type="text/javascript">
-
-	$('togglePlainText').observe('click', function(event) {
-		event.stop();	
-		$('togglePlainText_li').addClassName('active');
-		$('toggleHTML_li').removeClassName('active');
-	  	new Effect.Parallel([
-			Effect.Fade('html_message'),
-			Effect.Appear('text_message')
-	  	], { 
-	    	duration: 0
-  		});
-	});
-	$('toggleHTML').observe('click', function(event) {
-		event.stop();
-		$('toggleHTML_li').addClassName('active');
-		$('togglePlainText_li').removeClassName('active');
-		new Effect.Parallel([
-			Effect.Fade('text_message'),
-			Effect.Appear('html_message')
-		], { 
-			duration: 0
-		});
-	});
-</script> 
+ 
 
 <!-- tmpl_include send_email_archive_options_widget.tmpl -->
 
