Changed some bad wording to less bad wording.

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -491,7 +491,7 @@ for it to work correctly. For help on setting the cronjob, see the
 <fieldset> 
 	<legend>Support Files Directory</legend>
 	<div class="clearskiesbox"> 
-		The below options will be configured to use the directory below to store their needed files.
+		The installer will use the location you set below to install/configure the WYSIWYG editor(s) and file browser. 
 	</div>
 </p>
 
