--- a/dada/DADA/Template/templates/congrats_screen.tmpl
+++ b/dada/DADA/Template/templates/congrats_screen.tmpl
@@ -65,7 +65,7 @@
 
  <p>
   <label for="root_password">
-   Root Password:
+   <!-- tmpl_var PROGRAM_NAME --> Root Password:
   </label>
   <br />
   
@@ -96,7 +96,7 @@ If you would like to see more information about your current Program Configurati
 
 <p>
  <label for="root_password">
-  Root Password:
+  <!-- tmpl_var PROGRAM_NAME -->Root Password:
  </label>
  <br />
  
