--- a/dada/DADA/Template/templates/new_list_screen.tmpl
+++ b/dada/DADA/Template/templates/new_list_screen.tmpl
@@ -41,7 +41,7 @@
 	
 
 	 <legend>
-	  List Name
+	  Mailing List Name
 	 </legend>
  
 	<!-- tmpl_if flags_list_name -->
@@ -72,7 +72,7 @@
 		<p>The Mailing List Name cannot contain, &lt;'s, &gt;'s or, &quot;'s.</p>
 		
 		</div>
-	 <p><label for="list_name">List Name:</label<br/>
+	 <p><label for="list_name">Mailing List Name:</label<br/>
 	  <input type="text" id="list_name" name="list_name" value="<!-- tmpl_var list_name escape="HTML" -->" class="full" maxlength="250" />
 	 </p>
 </fieldset> 
