Tearing out the last vestiges of, "$GOOD_JOB_MESSAGE" I think.

--- a/dada/DADA/Template/templates/sending_preferences_test_widget.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_test_widget.tmpl
@@ -1,7 +1,8 @@
 <!-- begin sending_preferences_test_widget.tmpl --> 
 
 
-	<!-- tmpl_var name="GOOD_JOB_MESSAGE" -->
+	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->	
+	
 	<p>
 		
 		<!-- tmpl_if expr="list_settings.sending_method eq 'smtp'" --> 
