Closes #303 First Archive message shows incorrect link

--- a/dada/DADA/Template/templates/archive_index_nav_table_widget.tmpl
+++ b/dada/DADA/Template/templates/archive_index_nav_table_widget.tmpl
@@ -1,7 +1,7 @@
 <!-- begin archive_index_nav_table_widget.tmpl -->
 
 
-<table cellpadding="5" width="100%"> 
+<table cellpadding="5" width="100%" style="margin-left: auto; margin-right: auto;"> 
  <tr>
   <td valign="top" align="left" width="33%">
    <p>
