--- a/dada/DADA/Template/templates/archive_nav_table_widget.tmpl
+++ b/dada/DADA/Template/templates/archive_nav_table_widget.tmpl
@@ -1,6 +1,7 @@
 <!-- begin archive_nav_table_widget.tmpl --> 
 
-<table cellpadding="5"> 
+
+<table cellpadding="5" style="margin-left: auto; margin-right: auto;"> 
  <tr>
   <td valign="top" align="left" width="33%">
    <p>
