--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -84,7 +84,7 @@
 
 <form action="<!-- tmpl_var submitted_PROGRAM_URL -->"> 
 	<div style="text-align:center"> 
-		<input type="submit" class="processing" value="Start Working With <!-- tmpl_var PROGRAM_NAME -->!" />
+		<input type="submit" class="processing bigger_button" value="Start Working With <!-- tmpl_var PROGRAM_NAME -->!" />
 	</div>	
 </form>
 
