--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -22,6 +22,15 @@
 <legend>WYSIWYG Editor Options</legend> 
 
 
+<!-- tmpl_if using_no_wysiwyg_editor --> 
+<div class="badweatherbox">
+<p>
+ <strong>Warning!</strong>
+<p>You're currently selected WYSIWYG editor is currently not being used, because of a misconfiguration.</p>
+</div>
+
+<!-- /tmpl_if --> 
+
 <table cellpadding="5" border="0"> 
 
 <!-- tmpl_if ckeditor_enabled --> 
@@ -77,7 +86,7 @@
 	<td>
 
 
-			<label for="use_wysiwyg_editor_none">None</label>
+			<label for="use_wysiwyg_editor_none">Don't use a WYSIWYG Editor</label>
 	</td> 
 	 </tr>
 	
