Not sure why the stylesheet URL uses the S_PROGRAM_URL - changed it to PROGRAM_URL

--- a/dada/DADA/Template/templates/list_template.tmpl
+++ b/dada/DADA/Template/templates/list_template.tmpl
@@ -8,7 +8,7 @@
   <title><!-- tmpl_var title --></title>
 
 
-  <link rel="stylesheet" href="<!-- tmpl_var S_PROGRAM_URL -->/css/default.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="<!-- tmpl_var PROGRAM_URL -->/css/default.css" type="text/css" media="screen" />
 
 <!-- tmpl_if list_settings.show_archives --> 
 	<!-- tmpl_if list_settings.publish_archives_rss --> 
