Finishing touches on Installer tweaks.

--- a/dada/installer-disabled/templates/install_or_upgrade.tmpl
+++ b/dada/installer-disabled/templates/install_or_upgrade.tmpl
@@ -36,7 +36,7 @@
 		
 		<div style="text-align:center">
 
-	<input type="submit" name="submitbutton" value="Continue..." class="processing bigger_button" />
+	<input type="submit" name="submitbutton" value="&#187; Continue &#171;" class="processing bigger_button" />
 </div>
 	</form>
 </fieldset> 
