--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -486,7 +486,7 @@ for it to work correctly. For help on setting the cronjob, see the
 
 <fieldset> 
 	
-<legend>WYSIWYG Editors [<a href="#" onclick="toggleDisplay('wysiwyg_editor_help');return false;">?</a>]</legend>
+<legend>WYSIWYG Editors (Optional) [<a href="#" onclick="toggleDisplay('wysiwyg_editor_help');return false;">?</a>]</legend>
 <div id="wysiwyg_editor_help" style="display:none" class="clearskiesbox"> 
 <p>Dada Mail supports the use of third party WYSIWYG HTML editors to allow you to 
 compose and edit HTML mailing list messages. This allows you to send rich text messages, 
