That's.. that's uh, the actually title for this screen.

--- a/dada/DADA/Template/templates/profile_fields.tmpl
+++ b/dada/DADA/Template/templates/profile_fields.tmpl
@@ -1,6 +1,6 @@
 <!-- begin profile_fields.tmpl --> 
 
-<!-- tmpl_set name="title" value="Appearance and Templates &#187; Create a Back Link" -->
+<!-- tmpl_set name="title" value="Profiles &#187; Profile Fields" -->
 <div id="screentitle"> 
 	<div id="screentitlepadding">
 		Profiles
