Working on getting KCFinder to work more betterer.

--- a/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
+++ b/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
@@ -20,6 +20,6 @@ $FILE_BROWSER_OPTIONS = {
 		upload_dir   => '<!-- tmpl_var i_kcfinder_upload_dir -->', 
 		upload_url   => '<!-- tmpl_var i_kcfinder_upload_url -->',
 		session_name => 'PHPSESSID', 
-		session_dir  => '/tmp',
+		session_dir  => '<!-- tmpl_var i_session_dir -->',
 	},
 };
